25/04/2025
>odebrane nadbytecne komentare
>upraveny ascii art (MB1, blessed)
>upravena krcma
>zmenen text v kostele
>pridan changelog (moje-hra/changelog)
>output smazan a hra.exe je ted primo ve hlavni slozce (moje-hra/hra.exe)
>pridan backstory (tri nahodne vylepseni statu)
>kostlivec je nahrazen upirem ktery ziska zivoty pri kazdem zabiti
>opraven ctime, nahodne hodnoty

26/04/2025
>upir nemuze nadale do kostela
>byl pridan jetset sound effect ktery pozdeji vyuziju (moje-hra/resources/jetset.wav)

27/04/2025
>changelog upraven pro citelnost
>do resources byla pridana slozka extras ktera obsahuje ruzne verze ikony (moje-hra/resources/extras)
>pridan zastupce ktery ma ikonu, hra byla pojmenovana CrownOfHornsRPG [subject to change]
>buff ruznych nepratel

28/04/2025
>pridan VINES a UNDERDARK [subject to change]

01/05/2025
>pridan header (moje-hra/resources/barvy.h)
>do extras byl pridan jetset.wav pac ho dlouho nevyuziju (moje-hra/resources/extras/jetset.wav)
>konecne opravene ze kod potreboval "libgcc_s_dw2-1.dll" ted jsem knihovnu pridal takze by mel kod jit na windows.
>dnes zacinam pracovat na podpore linux a pozdeji i barvy

04/05/2025
>pridane headery do moje-hra/resources specificky character.h, utility.h, backstory.h.
>odebrane funkce ktere jsou ted v headerech.